Fix announcement overlap in iPhone 5S

--- a/_sass/2017/components/announcements-list.scss
+++ b/_sass/2017/components/announcements-list.scss
@@ -5,6 +5,7 @@
     bottom: 0;
     max-width: 420px;
     padding: 0;
+    z-index: 10;
   }
 
   @media (min-width: 481px) {
